crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__macros__macro-defined-not-used.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..29
  run "x" @28..29
-- problems --
