crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__macros__macro-used-twice.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..42
  run "P" @20..21
  run "(" @21..22
  run "A" @31..32
  run ")" @24..25
  run "+" @34..35
  run "P" @20..21
  run "(" @21..22
  run "B" @40..41
  run ")" @24..25
-- problems --
