crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__macros__newcommand-args.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..35
  run "P" @20..21
  run "(" @21..22
  run "x>0" @31..34
  run ")" @24..25
-- problems --
