crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__macros__newcommand-nested-use.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..60
  run "x" @51..52
  sym "∈" @53..56
  scripts Auto @16..49
    style DoubleStruck @16..26
      row @23..26
        run "R" @24..25
    sup:
      run "n" @48..49
-- problems --
