crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__macros__newcommand-noarg.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..36
  run "x" @28..29
  sym "∈" @30..33
  style DoubleStruck @16..26
    row @23..26
      run "R" @24..25
-- problems --
